Fix PR c++/77639 (ICE during error recovery)

gcc/cp/ChangeLog:

	PR c++/77639
	* parser.c (cp_parser_class_head): When
	processing_template_parmlist, don't assume that the
	class-head may start an explicit specialization.

gcc/testsuite/ChangeLog:

	PR c++/77639
	* g++.dg/template/error-recovery4.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240245 138bc75d-0d04-0410-961f-82ee72b054a4